--- a/css/home.css
+++ b/css/home.css
@@ -136,7 +136,7 @@
 }
 
 .about-content h2 {
-    font-size: clamp(1.8rem, 3vw, 2.5rem);
+    font-size: 2.5rem;
     margin-bottom: 20px;
     color: #00adb5;
     max-width: 600px;
@@ -235,6 +235,10 @@
 .consortium {
     padding: 0px 20px;
     color: #484848;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .consortium h1 {
@@ -244,6 +248,11 @@
     width: 100%;
     font-weight: 900;
     text-align: center;
+}
+
+.consortium p {
+    text-align: center;
+    max-width: 80%;
 }
 
 
@@ -386,7 +395,7 @@
 
 .training p {
     font-size: clamp(.8rem, 3vw, 1rem);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     width: 100%;
     font-weight: 500;
     text-align: left;
@@ -526,7 +535,7 @@ ul li {
 }
 
 .policy-impact h2 {
-    font-size: clamp(1rem, 6vh, 52px);
+    font-size: clamp(1rem, 5vh, 48px);
     margin-bottom: 20px;
     border-bottom: 2px solid #00adb5;
 }
@@ -676,6 +685,15 @@ ul li {
     margin: 8px auto;
     display: block;
     flex-shrink: 0;
+}
+
+@media (max-width: 1024px) {
+    .sparc-policy-front-image {
+        max-width: 400px;
+        height: 250px;
+        /* Smaller square image */
+    }
+    
 }
 
 .sparc-policy-back-content {
